re PR c++/10479 (alignof and sizeof (and other expressions) in attributes does not compile inside template classes)

PR c++/10479
	* parser.c (cp_parser_parenthesized_expression_list): Fold
	non-dependent expressions in attribute lists.

	PR c++/10479
	* g++.dg/ext/attrib16.C: New test.

From-SVN: r89135